# ml-demo

./: .gitignore  app.py  pyproject.toml  requirements.txt
pages/: 1_EDA.py  2_Preprocessing.py  3_Churn_Models.py  4_Live_Updates.py  5_Rec_EDA.py  6_Rec_Preprocessing.py  7_Rec_Models.py  8_Rec_Live.py
utils/: data_loader.py  models.py  rec_data_loader.py  rec_models.py  visualizations.py
