[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.6.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",
    "streamlit>=1.30.0",
    "umap-learn>=0.5.5",
    "watchdog>=6.0.0",
    "xgboost>=2.0.0",
]
